@@ -27,29 +27,10 @@ namespace Rcpp{
 	ExpressionVector::parse_error::~parse_error() throw(){}
 	const char* ExpressionVector::parse_error::what() const throw(){ return "parse error" ; }
 	
-	ExpressionVector::ExpressionVector(SEXP x) throw(not_compatible) : VectorBase() {
-		switch( TYPEOF( x ) ){
-			case EXPRSXP:
-				setSEXP( x ) ;
-				break ;
-			default:
-				{
-					SEXP res = R_NilValue ;
-					try{
-						res = Evaluator::run( Rf_lang2( Rf_install("as.expression"), x ) ) ;
-					} catch( const Evaluator::eval_error& e){
-						throw not_compatible( "could not convert to an expression vector" ) ;
-					}
-					setSEXP( res ) ;
-				}
-		}
-	}
+	ExpressionVector::ExpressionVector(SEXP x) throw(not_compatible) : ExpressionVector_Base(x) {}
+	ExpressionVector::ExpressionVector(const size_t& size) : ExpressionVector_Base(size) {}
 	
-	ExpressionVector::ExpressionVector(int size) : VectorBase() {
-		setSEXP( Rf_allocVector(EXPRSXP, size) ) ;
-	}
-
-	ExpressionVector::ExpressionVector(const std::string& code) throw(parse_error){
+	ExpressionVector::ExpressionVector(const std::string& code) throw(parse_error) : ExpressionVector_Base() {
 		ParseStatus status;
 		SEXP expr = PROTECT( Rf_mkString( code.c_str() ) );
 		SEXP res  = PROTECT( R_ParseVector(expr, -1, &status, R_NilValue));
@@ -63,33 +44,6 @@ namespace Rcpp{
 			throw parse_error() ;
 		}
 	}
-
-ExpressionVector::Proxy::Proxy(ExpressionVector& v, int i) :
-	parent(v), index(i){}
-
-ExpressionVector::Proxy::operator SEXP() const{
-	return VECTOR_ELT( parent, index ) ;
-}
-
-ExpressionVector::Proxy& ExpressionVector::Proxy::operator=( const Proxy& rhs){
-	SET_VECTOR_ELT( parent, index, VECTOR_ELT( rhs.parent, rhs.index) ) ;
-	return *this ;
-}
-
-ExpressionVector::Proxy& ExpressionVector::Proxy::operator=( SEXP rhs){
-	SET_VECTOR_ELT( parent, index, rhs ) ;
-	return *this ;
-}
-
-const ExpressionVector::Proxy ExpressionVector::operator[](int i) const throw(index_out_of_bounds){
-	if( i<0 || i>= length()) throw index_out_of_bounds() ;
-	return Proxy(const_cast<ExpressionVector&>(*this), i) ;
-}
-
-ExpressionVector::Proxy ExpressionVector::operator[](int i) throw(index_out_of_bounds){
-	if( i<0 || i>= length()) throw index_out_of_bounds() ;
-	return Proxy(*this, i ) ;
-}
 
 SEXP ExpressionVector::eval() throw(Evaluator::eval_error){
 	return Evaluator::run( Rf_lcons( Rf_install( "eval" ) , Rf_cons( m_sexp, R_NilValue) )) ;
