@@ -24,69 +24,11 @@
 
 #include <RcppCommon.h>
 #include <Rcpp/wrap.h>
-#include <Rcpp/Environment.h>
-#include <Rcpp/RObject.h>
-#include <Rcpp/VectorBase.h>
-#include <Rcpp/Evaluator.h>
-#include <Rcpp/Symbol.h>
+#include <Rcpp/SEXP_Vector.h>
 
 namespace Rcpp{ 
 
-class GenericVector : public VectorBase {     
-public:
-
-	/* much inspired from item 30 of more effective C++ */
-	class Proxy {
-	public:
-		Proxy( GenericVector& v, int index ) ;
-		
-		/* lvalue uses */
-		Proxy& operator=(const Proxy& rhs) ;
-		Proxy& operator=(SEXP rhs) ;
-		
-		template <typename T>
-		Proxy& operator=( const T& rhs){
-			SET_VECTOR_ELT( parent, index, wrap(rhs) ) ;
-			return *this; 
-		}
-		Proxy& operator=( const Environment::Binding& rhs) ;
-		
-		/* rvalue use */
-		operator SEXP() const ;
-		
-	private:
-		GenericVector& parent; 
-		int index ;
-	} ;
-
-
-	GenericVector(SEXP x) throw(not_compatible);
-	GenericVector( int size) ;
-
-#ifdef HAS_INIT_LISTS
-	GenericVector( std::initializer_list<SEXP> list) : VectorBase(){
-		fill( list.begin(), list.end() ) ;
-	} ;
-#endif
-
-	const Proxy operator[]( int i ) const throw(index_out_of_bounds);
-	Proxy operator[]( int i ) throw(index_out_of_bounds) ;
-	
-	friend class Proxy; 
-
-	template <typename InputIterator>
-	void fill( InputIterator first, InputIterator last){
-		size_t size = std::distance( first, last );
-		SEXP x = PROTECT( Rf_allocVector( VECSXP, size ) ) ;
-		for( size_t i=0; i<size ; i++, ++first){
-			SET_VECTOR_ELT( x, i, *first ) ;
-		}
-		setSEXP( x ) ;
-		UNPROTECT( 1 ); /* x */
-	}
-	
-} ;
-
+typedef SEXP_Vector<VECSXP> GenericVector ;
 typedef GenericVector List ;
 
 #ifdef HAS_INIT_LISTS
